--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   http: ^0.13.5
   google_fonts: ^3.0.1
   image_picker: ^0.8.6
+  flutter_secure_storage: ^6.1.0
 
 dev_dependencies:
   flutter_test:
