--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   google_fonts: ^3.0.1
   image_picker: ^0.8.6
   flutter_secure_storage: ^6.1.0
+  url_launcher: ^6.1.7
 
 dev_dependencies:
   flutter_test:
